--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-metamask-avatar": "^1.2.1",
+    "react-router-dom": "^6.16.0",
     "web3": "^4.1.2"
   },
   "devDependencies": {
