--- a/chainrity/package.json
+++ b/chainrity/package.json
@@ -15,6 +15,7 @@
     "hardhat": "^2.19.0"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "dotenv": "^16.3.1"
   }
 }
