--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-metamask-avatar": "^1.2.1",
     "react-router-dom": "^6.16.0",
+    "vite-tsconfig-paths": "^4.2.1",
     "web3": "^4.1.2"
   },
   "devDependencies": {
