--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "alchemy-sdk": "^2.11.0",
+    "dayjs": "^1.11.10",
     "ethers": "^6.7.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-metamask-avatar": "^1.2.1",
     "react-router-dom": "^6.16.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "vite-tsconfig-paths": "^4.2.1",
     "web3": "^4.1.2"
   },
