--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,8 @@
 {
-    "routes": [
-        { "src": "/", "dest": "/" },
-        { "src": "/dashboard", "dest": "/dashboard" }
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
     ]
 }
